--- a/notebooks/CurveAlignmentLucca.ipynb
+++ b/notebooks/CurveAlignmentLucca.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 99,
    "id": "b72676cd",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "id": "8bd11895",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 100,
    "id": "f0b32926",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 101,
    "id": "b0f4262a",
    "metadata": {},
    "outputs": [],
@@ -108,13 +108,9 @@
     "    aligned = Vt @ centered.T\n",
     "    return aligned.T, Vt\n",
     "\n",
-    "def icp_numpy(A_, B, max_iter=20, display=False, pca=False):\n",
-    "    if pca:\n",
-    "        A, Va = pca_align(A_)\n",
-    "        B_new, Vb = pca_align(B)\n",
-    "    else:\n",
-    "        A = A_\n",
-    "        B_new = B.copy()\n",
+    "def icp_numpy(A_, B, max_iter=20, display=False, pca=False, curve_id=None):\n",
+    "    A = A_\n",
+    "    B_new = B.copy()\n",
     "    \n",
     "    if display:\n",
     "        fig = plt.figure(figsize=(5, 5))\n",
@@ -148,10 +144,16 @@
     "        t = centroid_A - R @ centroid_B\n",
     "        B_new = (R @ B_new.T).T + t\n",
     "\n",
-    "        if display and i%5==0:\n",
+    "        if display and i % 10 == 0:\n",
+    "            # Plot kurven\n",
     "            ax.plot(*B_new.T, linewidth=2, label=f'Iteration {i+1}')\n",
+    "            # Beregn RMS-fejl\n",
+    "            rms = np.sqrt(np.mean(np.sum((A_corr - B_new)**2, axis=1)))\n",
+    "            # Opdatér titel og tilføj fejl i legend\n",
     "            ax.set_title(f\"Iteration {i+1} vs. Reference\", fontsize=14)\n",
-    "            ax.legend()\n",
+    "            if curve_id is not None:\n",
+    "                print(f\"Kurve {curve_id} – Iteration {i+1}: RMS error = {rms:.4f}\")\n",
+    "\n",
     "    return B_new\n",
     "\n",
     "def resample_curve(curve, n_points=1000):\n",
@@ -168,15 +170,172 @@
    "id": "3fad1e5d",
    "metadata": {},
    "source": [
-    "# Tjek hvilke kurver der er flippede"
+    "# Flip med PCA og align med ICP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 102,
    "id": "fe843771",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1947.0714285714287\n",
+      "Kurve 1 – Iteration 1: RMS error = 7.2086\n",
+      "Kurve 1 – Iteration 11: RMS error = 6.9754\n",
+      "Kurve 1 – Iteration 21: RMS error = 6.9752\n",
+      "Kurve 1 – Iteration 31: RMS error = 6.9752\n",
+      "Kurve 1 – Iteration 41: RMS error = 6.9752\n",
+      "Kurve 2 – Iteration 1: RMS error = 7.9518\n",
+      "Kurve 2 – Iteration 11: RMS error = 7.9243\n",
+      "Kurve 2 – Iteration 21: RMS error = 7.9243\n",
+      "Kurve 2 – Iteration 31: RMS error = 7.9243\n",
+      "Kurve 2 – Iteration 41: RMS error = 7.9243\n",
+      "Kurve 3 – Iteration 1: RMS error = 4.2013\n",
+      "Kurve 3 – Iteration 11: RMS error = 3.6941\n",
+      "Kurve 3 – Iteration 21: RMS error = 3.6820\n",
+      "Kurve 3 – Iteration 31: RMS error = 3.6379\n",
+      "Kurve 3 – Iteration 41: RMS error = 3.6379\n",
+      "Kurve 4 – Iteration 1: RMS error = 5.6738\n",
+      "Kurve 4 – Iteration 11: RMS error = 5.2713\n",
+      "Kurve 4 – Iteration 21: RMS error = 5.2713\n",
+      "Kurve 4 – Iteration 31: RMS error = 5.2713\n",
+      "Kurve 4 – Iteration 41: RMS error = 5.2713\n",
+      "Kurve 5 – Iteration 1: RMS error = 5.1306\n",
+      "Kurve 5 – Iteration 11: RMS error = 5.0446\n",
+      "Kurve 5 – Iteration 21: RMS error = 5.0446\n",
+      "Kurve 5 – Iteration 31: RMS error = 5.0446\n",
+      "Kurve 5 – Iteration 41: RMS error = 5.0446\n",
+      "Kurve 6 – Iteration 1: RMS error = 4.7096\n",
+      "Kurve 6 – Iteration 11: RMS error = 4.6058\n",
+      "Kurve 6 – Iteration 21: RMS error = 4.6058\n",
+      "Kurve 6 – Iteration 31: RMS error = 4.6058\n",
+      "Kurve 6 – Iteration 41: RMS error = 4.6058\n",
+      "Kurve 7 – Iteration 1: RMS error = 9.0621\n",
+      "Kurve 7 – Iteration 11: RMS error = 8.9767\n",
+      "Kurve 7 – Iteration 21: RMS error = 8.9767\n",
+      "Kurve 7 – Iteration 31: RMS error = 8.9767\n",
+      "Kurve 7 – Iteration 41: RMS error = 8.9767\n",
+      "Kurve 8 – Iteration 1: RMS error = 3.9805\n",
+      "Kurve 8 – Iteration 11: RMS error = 3.6387\n",
+      "Kurve 8 – Iteration 21: RMS error = 3.6387\n",
+      "Kurve 8 – Iteration 31: RMS error = 3.6387\n",
+      "Kurve 8 – Iteration 41: RMS error = 3.6387\n",
+      "Kurve 9 – Iteration 1: RMS error = 3.7924\n",
+      "Kurve 9 – Iteration 11: RMS error = 3.2363\n",
+      "Kurve 9 – Iteration 21: RMS error = 3.2363\n",
+      "Kurve 9 – Iteration 31: RMS error = 3.2363\n",
+      "Kurve 9 – Iteration 41: RMS error = 3.2363\n",
+      "Kurve 10 – Iteration 1: RMS error = 33.6520\n",
+      "Kurve 10 – Iteration 11: RMS error = 33.5702\n",
+      "Kurve 10 – Iteration 21: RMS error = 33.5702\n",
+      "Kurve 10 – Iteration 31: RMS error = 33.5702\n",
+      "Kurve 10 – Iteration 41: RMS error = 33.5702\n",
+      "Kurve 11 – Iteration 1: RMS error = 18.5354\n",
+      "Kurve 11 – Iteration 11: RMS error = 18.4256\n",
+      "Kurve 11 – Iteration 21: RMS error = 18.4256\n",
+      "Kurve 11 – Iteration 31: RMS error = 18.4256\n",
+      "Kurve 11 – Iteration 41: RMS error = 18.4256\n",
+      "Kurve 12 – Iteration 1: RMS error = 2.5180\n",
+      "Kurve 12 – Iteration 11: RMS error = 1.9453\n",
+      "Kurve 12 – Iteration 21: RMS error = 1.9453\n",
+      "Kurve 12 – Iteration 31: RMS error = 1.9453\n",
+      "Kurve 12 – Iteration 41: RMS error = 1.9453\n",
+      "Kurve 13 – Iteration 1: RMS error = 4.3045\n",
+      "Kurve 13 – Iteration 11: RMS error = 3.7805\n",
+      "Kurve 13 – Iteration 21: RMS error = 3.7805\n",
+      "Kurve 13 – Iteration 31: RMS error = 3.7805\n",
+      "Kurve 13 – Iteration 41: RMS error = 3.7805\n",
+      "Kurve 14 – Iteration 1: RMS error = 4.3846\n",
+      "Kurve 14 – Iteration 11: RMS error = 4.2024\n",
+      "Kurve 14 – Iteration 21: RMS error = 4.2023\n",
+      "Kurve 14 – Iteration 31: RMS error = 4.2023\n",
+      "Kurve 14 – Iteration 41: RMS error = 4.2023\n",
+      "Kurve 15 – Iteration 1: RMS error = 4.8583\n",
+      "Kurve 15 – Iteration 11: RMS error = 4.6063\n",
+      "Kurve 15 – Iteration 21: RMS error = 4.6063\n",
+      "Kurve 15 – Iteration 31: RMS error = 4.6063\n",
+      "Kurve 15 – Iteration 41: RMS error = 4.6063\n",
+      "Kurve 16 – Iteration 1: RMS error = 11.4050\n",
+      "Kurve 16 – Iteration 11: RMS error = 11.3640\n",
+      "Kurve 16 – Iteration 21: RMS error = 11.3640\n",
+      "Kurve 16 – Iteration 31: RMS error = 11.3640\n",
+      "Kurve 16 – Iteration 41: RMS error = 11.3640\n",
+      "Kurve 17 – Iteration 1: RMS error = 4.4061\n",
+      "Kurve 17 – Iteration 11: RMS error = 4.1966\n",
+      "Kurve 17 – Iteration 21: RMS error = 4.1899\n",
+      "Kurve 17 – Iteration 31: RMS error = 4.1898\n",
+      "Kurve 17 – Iteration 41: RMS error = 4.1898\n",
+      "Kurve 18 – Iteration 1: RMS error = 9.8076\n",
+      "Kurve 18 – Iteration 11: RMS error = 9.6685\n",
+      "Kurve 18 – Iteration 21: RMS error = 9.6672\n",
+      "Kurve 18 – Iteration 31: RMS error = 9.6672\n",
+      "Kurve 18 – Iteration 41: RMS error = 9.6672\n",
+      "Kurve 19 – Iteration 1: RMS error = 4.7203\n",
+      "Kurve 19 – Iteration 11: RMS error = 4.4674\n",
+      "Kurve 19 – Iteration 21: RMS error = 4.4674\n",
+      "Kurve 19 – Iteration 31: RMS error = 4.4674\n",
+      "Kurve 19 – Iteration 41: RMS error = 4.4674\n",
+      "Kurve 20 – Iteration 1: RMS error = 6.2648\n",
+      "Kurve 20 – Iteration 11: RMS error = 6.0219\n",
+      "Kurve 20 – Iteration 21: RMS error = 6.0218\n",
+      "Kurve 20 – Iteration 31: RMS error = 6.0218\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_16684\\1422162593.py:12: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  fig = plt.figure(figsize=(5, 5))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kurve 20 – Iteration 41: RMS error = 6.0218\n",
+      "Kurve 21 – Iteration 1: RMS error = 5.3455\n",
+      "Kurve 21 – Iteration 11: RMS error = 4.1015\n",
+      "Kurve 21 – Iteration 21: RMS error = 4.0913\n",
+      "Kurve 21 – Iteration 31: RMS error = 4.0913\n",
+      "Kurve 21 – Iteration 41: RMS error = 4.0913\n",
+      "Kurve 22 – Iteration 1: RMS error = 4.7378\n",
+      "Kurve 22 – Iteration 11: RMS error = 4.4416\n",
+      "Kurve 22 – Iteration 21: RMS error = 4.4413\n",
+      "Kurve 22 – Iteration 31: RMS error = 4.4413\n",
+      "Kurve 22 – Iteration 41: RMS error = 4.4413\n",
+      "Kurve 23 – Iteration 1: RMS error = 11.6075\n",
+      "Kurve 23 – Iteration 11: RMS error = 11.5486\n",
+      "Kurve 23 – Iteration 21: RMS error = 11.5482\n",
+      "Kurve 23 – Iteration 31: RMS error = 11.5472\n",
+      "Kurve 23 – Iteration 41: RMS error = 11.5470\n",
+      "Kurve 24 – Iteration 1: RMS error = 5.8160\n",
+      "Kurve 24 – Iteration 11: RMS error = 5.6949\n",
+      "Kurve 24 – Iteration 21: RMS error = 5.6945\n",
+      "Kurve 24 – Iteration 31: RMS error = 5.6945\n",
+      "Kurve 24 – Iteration 41: RMS error = 5.6945\n",
+      "Kurve 25 – Iteration 1: RMS error = 3.8477\n",
+      "Kurve 25 – Iteration 11: RMS error = 3.5996\n",
+      "Kurve 25 – Iteration 21: RMS error = 3.5995\n",
+      "Kurve 25 – Iteration 31: RMS error = 3.5995\n",
+      "Kurve 25 – Iteration 41: RMS error = 3.5995\n",
+      "Kurve 26 – Iteration 1: RMS error = 6.1951\n",
+      "Kurve 26 – Iteration 11: RMS error = 6.0521\n",
+      "Kurve 26 – Iteration 21: RMS error = 6.0354\n",
+      "Kurve 26 – Iteration 31: RMS error = 6.0354\n",
+      "Kurve 26 – Iteration 41: RMS error = 6.0354\n",
+      "Kurve 27 – Iteration 1: RMS error = 4.4314\n",
+      "Kurve 27 – Iteration 11: RMS error = 4.3334\n",
+      "Kurve 27 – Iteration 21: RMS error = 4.3334\n",
+      "Kurve 27 – Iteration 31: RMS error = 4.3334\n",
+      "Kurve 27 – Iteration 41: RMS error = 4.3334\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "import numpy as np\n",
@@ -206,10 +365,12 @@
     "\n",
     "# Step 3: Resample + kør pipeline\n",
     "resampled_curves = [resample_curve(c, 1000) for c in kurver]\n",
+    "leng = [len(c) for c in kurver]\n",
+    "print(sum(leng)/len(leng))\n",
     "\n",
     "# PCA + Flip\n",
     "oriented_curves = []\n",
-    "for i, curve in enumerate(resampled_curves):\n",
+    "for i, curve in enumerate(kurver):\n",
     "    pca_rotated = pca_align(curve)\n",
     "    flipped = flip_curve(pca_rotated, i)\n",
     "    oriented_curves.append(flipped)\n",
@@ -217,7 +378,7 @@
     "aligned_curves = [reference]\n",
     "\n",
     "for i in range(1, len(oriented_curves)):\n",
-    "    aligned = icp_numpy(reference, oriented_curves[i], max_iter=50)\n",
+    "    aligned = icp_numpy(reference, oriented_curves[i], max_iter=50, display=True,curve_id=i)\n",
     "    aligned_curves.append(aligned)\n",
     "\n"
    ]
@@ -231,9 +392,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65fd60ac",
+   "metadata": {},
+   "source": [
+    "### Uden ICP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "id": "7df0e408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "for i, curve in enumerate(oriented_curves):\n",
+    "    ax.plot(*curve.T, linewidth=1.2, label=f'Kurve {i+1}')\n",
+    "\n",
+    "ax.set_title(\"After PCA → Flip\", fontsize=14)\n",
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")\n",
+    "ax.view_init(elev=0, azim=180)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0c53eef",
+   "metadata": {},
+   "source": [
+    "### Med ICP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "f6be5293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +452,7 @@
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
     "ax.set_zlabel(\"Z\")\n",
-    "#ax.view_init(elev=30, azim=100)\n",
+    "ax.view_init(elev=0, azim=180)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -342,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 103,
    "id": "d003e598",
    "metadata": {},
    "outputs": [],
@@ -477,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 104,
    "id": "e4d370f0",
    "metadata": {},
    "outputs": [
@@ -521,7 +723,7 @@
     "import re\n",
     "import numpy as np\n",
     "\n",
-    "output_folder = \"PC roteret\"\n",
+    "output_folder = \"../Data/PC roteret\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
     "for i, path in enumerate(paths):\n",
@@ -541,6 +743,105 @@
     "    save_path = os.path.join(output_folder, new_name)\n",
     "    np.savetxt(save_path, rotated_curves[i], delimiter=\",\")\n",
     "    print(f\"✅ Gemte {new_name}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "50bea6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Skaleret og gemt: Rør01Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør01Kurve5_PC.csv\n",
+      "✅ Skaleret og gemt: Rør02Kurve3_PC.csv\n",
+      "✅ Skaleret og gemt: Rør02Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør03Kurve1_PC.csv\n",
+      "✅ Skaleret og gemt: Rør03Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør04Kurve1_PC.csv\n",
+      "✅ Skaleret og gemt: Rør04Kurve2_PC.csv\n",
+      "✅ Skaleret og gemt: Rør05Kurve3_PC.csv\n",
+      "✅ Skaleret og gemt: Rør05Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør05Kurve5_PC.csv\n",
+      "✅ Skaleret og gemt: Rør06Kurve2_PC.csv\n",
+      "✅ Skaleret og gemt: Rør06Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør06Kurve5_PC.csv\n",
+      "✅ Skaleret og gemt: Rør07Kurve1_PC.csv\n",
+      "✅ Skaleret og gemt: Rør07Kurve2_PC.csv\n",
+      "✅ Skaleret og gemt: Rør07Kurve3_PC.csv\n",
+      "✅ Skaleret og gemt: Rør07Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør08Kurve1_PC.csv\n",
+      "✅ Skaleret og gemt: Rør08Kurve3_PC.csv\n",
+      "✅ Skaleret og gemt: Rør08Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør08Kurve5_PC.csv\n",
+      "✅ Skaleret og gemt: Rør09Kurve2_PC.csv\n",
+      "✅ Skaleret og gemt: Rør09Kurve4_PC.csv\n",
+      "✅ Skaleret og gemt: Rør10Kurve1_PC.csv\n",
+      "✅ Skaleret og gemt: Rør10Kurve2_PC.csv\n",
+      "✅ Skaleret og gemt: Rør10Kurve3_PC.csv\n",
+      "✅ Skaleret og gemt: Rør10Kurve4_PC.csv\n",
+      "\n",
+      "🎉 Alle tilgængelige kurver er skaleret og gemt i 'Skalerede kurver'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import re\n",
+    "\n",
+    "# === Stier ===\n",
+    "input_folder = \"../Data/PC roteret\"\n",
+    "output_folder = \"../Data/Skalerede kurver\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "# === Læs voxel sizes ===\n",
+    "voxel_sizes = []\n",
+    "with open(\"../Data/Voxelstørrelse.txt\", \"r\") as f:\n",
+    "    for linje in f:\n",
+    "        linje = linje.strip()\n",
+    "        if linje and \"?\" not in linje:\n",
+    "            voxel = np.fromstring(linje.strip(\"[]\"), sep=\" \")\n",
+    "            voxel_sizes.append(voxel)\n",
+    "        else:\n",
+    "            voxel_sizes.append(None)  # placeholder for manglende data\n",
+    "\n",
+    "# === Hjælpefunktion til at finde rørnummer ===\n",
+    "def extract_rørnummer(filename):\n",
+    "    match = re.search(r\"Rør(\\d+)\", filename)\n",
+    "    if match:\n",
+    "        return int(match.group(1))\n",
+    "    return None\n",
+    "\n",
+    "# === Gennemgå og skaler alle kurver ===\n",
+    "for filnavn in os.listdir(input_folder):\n",
+    "    if not filnavn.endswith(\".csv\"):\n",
+    "        continue\n",
+    "\n",
+    "    rørnummer = extract_rørnummer(filnavn)\n",
+    "    if rørnummer is None or rørnummer > len(voxel_sizes):\n",
+    "        print(f\"⚠️ Rørnummer ikke fundet i filnavn: {filnavn}\")\n",
+    "        continue\n",
+    "\n",
+    "    voxel = voxel_sizes[rørnummer - 1]\n",
+    "    if voxel is None:\n",
+    "        print(f\"⚠️ Manglende voxel size for Rør{rørnummer} → {filnavn}\")\n",
+    "        continue\n",
+    "\n",
+    "    input_path = os.path.join(input_folder, filnavn)\n",
+    "    output_path = os.path.join(output_folder, filnavn)\n",
+    "\n",
+    "    # Indlæs, skaler og gem\n",
+    "    curve = np.loadtxt(input_path, delimiter=\",\")\n",
+    "    scaled_curve = curve * voxel\n",
+    "    np.savetxt(output_path, scaled_curve, delimiter=\",\", fmt=\"%.6f\")\n",
+    "\n",
+    "    print(f\"✅ Skaleret og gemt: {filnavn}\")\n",
+    "\n",
+    "print(\"\\n🎉 Alle tilgængelige kurver er skaleret og gemt i 'Skalerede kurver'\")\n"
    ]
   }
  ],
